# real-estate

./: .env  Cargo.toml  diesel.toml
migrations/2025-03-24-055334_create_properties/: down.sql  up.sql
migrations/2025-03-24-103542_create_agents/: up.sql
migrations/2025-03-24-104103_add_agent_to_properties/: up.sql
migrations/2025-03-24-105928_create_property_types_and_categories/: up.sql
migrations/2025-03-24-110054_create_join_tables/: up.sql
migrations/2025-03-24-113801_add_fields_to_properties/: up.sql
migrations/2025-03-24-121334_remove_timestamps_from_properties/: up.sql
migrations/2025-03-24-121711_remove_timestamps_from_agents/: up.sql
src/: main.rs  models.rs  schema.rs
