[package]
name = "real-estate"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
actix-cors = "0.6"
diesel = { version = "2.0.3", features = ["postgres"]}
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

